--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Event.h" />
     <ClInclude Include="CompletionPort.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Objectpool.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="framework.h" />
