--- a/IocpLib/IocpLib.vcxproj.filters
+++ b/IocpLib/IocpLib.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="CriticalSection.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Objectpool.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IocpLib.cpp">
