--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{235F5225-EB98-470A-ACFA-3B59D54CFD06}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>IocpLib</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -158,10 +158,11 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Objectpool.h" />
     <ClInclude Include="Singleton.h" />
-    <ClInclude Include="Socket.h" />
+    <ClInclude Include="Session.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Thread.h" />
+    <ClInclude Include="WinSock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ClientSession.cpp" />
@@ -169,7 +170,7 @@
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="CompletionPort.cpp" />
     <ClCompile Include="Logger.cpp" />
-    <ClCompile Include="Socket.cpp" />
+    <ClCompile Include="Session.cpp" />
     <ClCompile Include="IocpLib.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
