--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="CompletionPort.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Objectpool.h" />
+    <ClInclude Include="OverlappedIOContext.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Session.h" />
     <ClInclude Include="framework.h" />
