클라이언트 매니저 추가
오브젝트 풀에 관해서 좀 더 그럴듯하게 관리할 필요성이 있음
버퍼구조 좀 더 고민해볼 것

--- a/IocpLib/IocpLib.vcxproj.filters
+++ b/IocpLib/IocpLib.vcxproj.filters
@@ -59,6 +59,12 @@
     <ClInclude Include="ServerSession.h">
       <Filter>세션 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ClientSessionManager.h">
+      <Filter>세션 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CircularQueue.h">
+      <Filter>유틸리티</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IocpLib.cpp">
@@ -96,6 +102,12 @@
     </ClCompile>
     <ClCompile Include="OverlappedIOContext.cpp">
       <Filter>세션 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ClientSessionManager.cpp">
+      <Filter>세션 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CircularQueue.cpp">
+      <Filter>유틸리티</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
