--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -152,7 +152,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CircularQueue.h" />
     <ClInclude Include="ClientSession.h" />
+    <ClInclude Include="ClientSessionManager.h" />
     <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="CompletionPort.h" />
     <ClInclude Include="FastSpinlock.h" />
@@ -168,7 +170,9 @@
     <ClInclude Include="WinSock.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CircularQueue.cpp" />
     <ClCompile Include="ClientSession.cpp" />
+    <ClCompile Include="ClientSessionManager.cpp" />
     <ClCompile Include="CriticalSection.cpp" />
     <ClCompile Include="CompletionPort.cpp" />
     <ClCompile Include="FastSpinlock.cpp" />
