--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -143,6 +143,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <CompileAsWinRT>false</CompileAsWinRT>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -152,7 +153,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CircularQueue.h" />
     <ClInclude Include="ClientSession.h" />
     <ClInclude Include="ClientSessionManager.h" />
     <ClInclude Include="CriticalSection.h" />
@@ -161,6 +161,7 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Objectpool.h" />
     <ClInclude Include="OverlappedIOContext.h" />
+    <ClInclude Include="CircularBuffer.h" />
     <ClInclude Include="ServerSession.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Session.h" />
@@ -170,7 +171,6 @@
     <ClInclude Include="WinSock.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CircularQueue.cpp" />
     <ClCompile Include="ClientSession.cpp" />
     <ClCompile Include="ClientSessionManager.cpp" />
     <ClCompile Include="CriticalSection.cpp" />
