--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{235F5225-EB98-470A-ACFA-3B59D54CFD06}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>IocpLib</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -48,7 +48,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>false</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -157,6 +157,7 @@
     <ClInclude Include="ClientSessionManager.h" />
     <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="CompletionPort.h" />
+    <ClInclude Include="DummyClients.h" />
     <ClInclude Include="FastSpinlock.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Objectpool.h" />
@@ -175,6 +176,7 @@
     <ClCompile Include="ClientSessionManager.cpp" />
     <ClCompile Include="CriticalSection.cpp" />
     <ClCompile Include="CompletionPort.cpp" />
+    <ClCompile Include="DummyClients.cpp" />
     <ClCompile Include="FastSpinlock.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="OverlappedIOContext.cpp" />
