--- a/IocpLib/IocpLib.vcxproj.filters
+++ b/IocpLib/IocpLib.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="CircularBuffer.h">
       <Filter>유틸리티</Filter>
     </ClInclude>
+    <ClInclude Include="DummyClients.h">
+      <Filter>세션 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IocpLib.cpp">
@@ -104,6 +107,9 @@
       <Filter>세션 파일</Filter>
     </ClCompile>
     <ClCompile Include="ClientSessionManager.cpp">
+      <Filter>세션 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DummyClients.cpp">
       <Filter>세션 파일</Filter>
     </ClCompile>
   </ItemGroup>
