패킷 통신확인
엔드마크개념 버퍼단위에서 구현
가변길이 패킷 안정화시킴

로깅 관련해서 쓰래드(or 세션) 단위로 만들어서 사용할 수 있도록 만들어 볼것
패킷 삭제시 초기화 반드시 할 것
내일부터는 UML 작성하고 파일처리나 예외처리 어떻게 구현할 것인지 고민해 볼 것

--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Objectpool.h" />
     <ClInclude Include="OverlappedIOContext.h" />
     <ClInclude Include="CircularBuffer.h" />
+    <ClInclude Include="Packet.h" />
     <ClInclude Include="ServerSession.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Session.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="FastSpinlock.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="OverlappedIOContext.cpp" />
+    <ClCompile Include="Packet.cpp" />
     <ClCompile Include="ServerSession.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="IocpLib.cpp" />
