--- a/IocpLib/IocpLib.vcxproj
+++ b/IocpLib/IocpLib.vcxproj
@@ -143,7 +143,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <CompileAsWinRT>false</CompileAsWinRT>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -160,6 +160,7 @@
     <ClInclude Include="DummyClients.h" />
     <ClInclude Include="FastSpinlock.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="NetworkObject.h" />
     <ClInclude Include="Objectpool.h" />
     <ClInclude Include="OverlappedIOContext.h" />
     <ClInclude Include="CircularBuffer.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="DummyClients.cpp" />
     <ClCompile Include="FastSpinlock.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="NetworkObject.cpp" />
     <ClCompile Include="OverlappedIOContext.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="ServerSession.cpp" />
